--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
     "mongodb": "^7.0.0",
