--- a/models/greenlaunch/package.json
+++ b/models/greenlaunch/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "auth-service",
+  "name": "greenlaunch",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -14,11 +14,6 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "express-rate-limit": "^8.2.1",
-    "helmet": "^8.1.0",
-    "mongodb": "^7.0.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.10"
+    "helmet": "^8.1.0"
   }
 }
