--- a/services/ecoorbit-edu/package.json
+++ b/services/ecoorbit-edu/package.json
@@ -16,6 +16,7 @@
     "express": "^5.1.0",
     "express-rate-limit": "^8.2.1",
     "helmet": "^8.1.0",
+    "nodemon": "^3.1.10",
     "zod": "^4.1.12"
   }
 }
